# seshat

./: README.md  package_setup.py  pyproject.toml  seshat_test.py
seshat/: __init__.py  proxy.py
