[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seshat-trace"
version = "0.1.0"
authors = [
    { name = "Adrian Loh" }
]
description = "A lightweight Python module designed for straightforward function tracing"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
